--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react-dom": "^18.3.0",
     "axios": "^1.7.2",
     "generate-react-cli": "^8.4.8",
+    "lodash.debounce": "^4.0.8",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.25.1",
@@ -51,6 +52,7 @@
   },
   "devDependencies": {
     "@types/dotenv": "^8.2.0",
+    "@types/lodash.debounce": "^4.0.9",
     "dotenv": "^16.4.5"
   }
 }
